k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengate
  labels:
    app: opengate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opengate
  template:
    metadata:
      labels:
        app: opengate
    spec:
      containers:
        - name: opengate
          image: ghcr.io/gofreego/opengate:pilot-a2d8482
          imagePullPolicy: Always
          ports:
            - name: gateway
              containerPort: 80
            - name: admin
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: gateway
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: gateway
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
