k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengate
spec:
  selector:
    app: opengate
  ports:
    - name: gateway
      port: 80
      targetPort: gateway
    - name: admin
      port: 8080
      targetPort: admin
